--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,27 @@ calces:
 
 airalo:
   - com.mobillium.airalo/com.airalo.ui.splash.SplashActivity
+
+fossify_voice_recorder:
+  - org.fossify.voicerecorder/org.fossify.voicerecorder.activities.SplashActivity.Green
+
+mastify:
+  - com.github.whitescent.mastify/com.github.whitescent.mastify.MainActivity
+
+money_manager_ex:
+  - com.money.manager.ex/com.money.manager.ex.home.MainActivity
+
+share_file_server:
+  - com.xlzhen.sharefileserver/com.xlzhen.sharefileserver.MainActivity
+
+snaptick:
+  - com.vishal2376.snaptick/com.vishal2376.snaptick.MainActivity
+
+tachiyomis97:
+  - eu.kanade.tachiyomi.s97/eu.kanade.tachiyomi.ui.main.MainActivity
+
+tor_services:
+  - org.torproject.torservices/org.torproject.torservices.SettingsActivity
+
+trustdevice_fingerprint:
+  - com.trustdevice.android/cn.tongdun.android.activitys.SplashActivity
