--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,42 +9,42 @@
 # new_icon_2_alt_1: {}
 #
 andftp:
-  lysesoft.andftp/lysesoft.andftp.SplashActivity
+  - lysesoft.andftp/lysesoft.andftp.SplashActivity
 
 dualwallpaper:
-  de.dlyt.yanndroid.dualwallpaper/de.dlyt.yanndroid.dualwallpaper.ui.activity.MainActivity
+  - de.dlyt.yanndroid.dualwallpaper/de.dlyt.yanndroid.dualwallpaper.ui.activity.MainActivity
 
 gifshop:
-  com.gif.gifmaker/com.gif.gifmaker.ui.splash.SplashScreen
+  - com.gif.gifmaker/com.gif.gifmaker.ui.splash.SplashScreen
 
 i_cant_wake_up:
-  com.kog.alarmclock/com.n7mobile.icantwakeup.ui.MainActivity
+  - com.kog.alarmclock/com.n7mobile.icantwakeup.ui.MainActivity
 
 monocles_translator:
-  de.monocles.translator/de.monocles.translator.ui.MainActivity
+  - de.monocles.translator/de.monocles.translator.ui.MainActivity
 
 nacho_notch:
-  com.xda.nachonotch/com.xda.nachonotch.MainActivity
+  - com.xda.nachonotch/com.xda.nachonotch.MainActivity
 
 night_filter:
-  com.digipom.nightfilter/com.digipom.nightfilter.activity.StartActivity
+  - com.digipom.nightfilter/com.digipom.nightfilter.activity.StartActivity
 
 night_filter_alt_1: {}
 
 square_pic:
-  nocrop.photoeditor.squarepic/com.shamble.instafit.SplashActivity
+  - nocrop.photoeditor.squarepic/com.shamble.instafit.SplashActivity
 
 tenki_jp:
-  jwa.or.jp.tenkijp3/jwa.or.jp.tenkijp3.SplashActivity
+  - jwa.or.jp.tenkijp3/jwa.or.jp.tenkijp3.SplashActivity
 
 tinder:
-  com.tinder/com.tinder.launch.internal.activities.LoginActivity
+  - com.tinder/com.tinder.launch.internal.activities.LoginActivity
 
 waveeditor:
-  io.sbaud.wavstudio/io.sbaud.wavstudio.activities.LoadActivity
+  - io.sbaud.wavstudio/io.sbaud.wavstudio.activities.LoadActivity
 
 wordfeud:
-  com.hbwares.wordfeud.free/com.hbwares.wordfeud.ui.WordFeudActivity
+  - com.hbwares.wordfeud.free/com.hbwares.wordfeud.ui.WordFeudActivity
 
 yahoo_mail_japan:
-  jp.co.yahoo.android.ymail/jp.co.yahoo.android.ymail.YMailStartActivity
+  - jp.co.yahoo.android.ymail/jp.co.yahoo.android.ymail.YMailStartActivity
