remove shades and rename Yahoo Japan Mail icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -46,5 +46,5 @@ waveeditor:
 wordfeud:
   - com.hbwares.wordfeud.free/com.hbwares.wordfeud.ui.WordFeudActivity
 
-yahoo_mail_japan:
+yahoo_japan_mail:
   - jp.co.yahoo.android.ymail/jp.co.yahoo.android.ymail.YMailStartActivity
