--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,43 @@
 #
 # new_icon_2_alt_1: {}
 #
+andftp:
+  - lysesoft.andftp/lysesoft.andftp.SplashActivity
+
+dualwallpaper:
+  - de.dlyt.yanndroid.dualwallpaper/de.dlyt.yanndroid.dualwallpaper.ui.activity.MainActivity
+
+gifshop:
+  - com.gif.gifmaker/com.gif.gifmaker.ui.splash.SplashScreen
+
+i_cant_wake_up:
+  - com.kog.alarmclock/com.n7mobile.icantwakeup.ui.MainActivity
+
+monocles_translator:
+  - de.monocles.translator/de.monocles.translator.ui.MainActivity
+
+nacho_notch:
+  - com.xda.nachonotch/com.xda.nachonotch.MainActivity
+
+night_filter:
+  - com.digipom.nightfilter/com.digipom.nightfilter.activity.StartActivity
+
+night_filter_alt_1: {}
+
+square_pic:
+  - nocrop.photoeditor.squarepic/com.shamble.instafit.SplashActivity
+
+tenki_jp:
+  - jwa.or.jp.tenkijp3/jwa.or.jp.tenkijp3.SplashActivity
+
+tinder:
+  - com.tinder/com.tinder.launch.internal.activities.LoginActivity
+
+waveeditor:
+  - io.sbaud.wavstudio/io.sbaud.wavstudio.activities.LoadActivity
+
+wordfeud:
+  - com.hbwares.wordfeud.free/com.hbwares.wordfeud.ui.WordFeudActivity
+
+yahoo_japan_mail:
+  - jp.co.yahoo.android.ymail/jp.co.yahoo.android.ymail.YMailStartActivity
