add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -58,3 +58,21 @@ my_boy:
 
 lightblocks:
   - de.golfgl.lightblocks/de.golfgl.lightblocks.AndroidLauncher
+
+_7zipper:
+  - org.joa.zipperplus7/org.joa.zipperplus7.StartPageActivity
+
+_8vim_keyboard:
+  - inc.flide.vi8/inc.flide.vim8.SettingsLauncherAlias
+
+amazon_appstore:
+  - com.amazon.venezia/com.amazon.venezia.Launcher
+
+famistudio:
+  - org.famistudio/crc64a10958aa5b7794e0.FamiStudioWindow
+
+mediafire:
+  - com.mediafire.android/com.mediafire.android.MainActivity
+
+music:
+  - com.heytap.music/com.allsaints.music.ui.splash.SplashActivity
