--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -76,3 +76,6 @@ mediafire:
 
 music:
   - com.heytap.music/com.allsaints.music.ui.splash.SplashActivity
+
+nymf:
+  - com.nymf.android/com.nymf.android.ui.SplashActivity
