new icon: SPUTNIK News

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -79,3 +79,6 @@ music:
 
 nymf:
   - com.nymf.android/com.nymf.android.ui.SplashActivity
+
+sputnik_news:
+  - com.sputniknews.sputnik/ru.rian.reader5.activity.SplashActivity
