new icon: DevInfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -82,3 +82,6 @@ nymf:
 
 sputnik_news:
   - com.sputniknews.sputnik/ru.rian.reader5.activity.SplashActivity
+
+devinfo:
+  - com.liuzh.deviceinfo/com.liuzh.deviceinfo.splash.SplashActivity
