icon link: Tabata Timer -> Clean Timer

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -85,3 +85,6 @@ sputnik_news:
 
 devinfo:
   - com.liuzh.deviceinfo/com.liuzh.deviceinfo.splash.SplashActivity
+
+tabata_timer:
+  - com.mzhang.cleantimer/com.mzhang.cleantimer.MainActivity
