new icon: Cinemax

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -88,3 +88,6 @@ devinfo:
 
 tabata_timer:
   - com.mzhang.cleantimer/com.mzhang.cleantimer.MainActivity
+
+cinemax:
+  - com.maximillianleonov.cinemax/com.maximillianleonov.cinemax.CinemaxActivity
