new icon: Andor's Trail

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -91,3 +91,7 @@ tabata_timer:
 
 cinemax:
   - com.maximillianleonov.cinemax/com.maximillianleonov.cinemax.CinemaxActivity
+
+andors_trail:
+  - com.gpl.rpg.AndorsTrail/com.gpl.rpg.AndorsTrail.activity.StartScreenActivity
+  
