new icon: Block Puzzle Stone Wars

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -94,4 +94,6 @@ cinemax:
 
 andors_trail:
   - com.gpl.rpg.AndorsTrail/com.gpl.rpg.AndorsTrail.activity.StartScreenActivity
-  
+
+block_puzzle_stone_wars:
+  - de.mwvb.blockpuzzle/de.mwvb.blockpuzzle.global.StartScreenActivity
