new icon: Spell4Wiki

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -97,3 +97,6 @@ andors_trail:
 
 block_puzzle_stone_wars:
   - de.mwvb.blockpuzzle/de.mwvb.blockpuzzle.global.StartScreenActivity
+
+spell4wiki:
+  - com.manimarank.spell4wiki/com.manimarank.spell4wiki.ui.splash.SplashActivity
