new icon: Senreta Vortaro

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -100,3 +100,6 @@ block_puzzle_stone_wars:
 
 spell4wiki:
   - com.manimarank.spell4wiki/com.manimarank.spell4wiki.ui.splash.SplashActivity
+
+senreta_vortaro:
+  - org.mcxa.vortaro/org.mcxa.vortaro.MainActivity
