new icon: Simple Weight Tracker

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -103,3 +103,6 @@ spell4wiki:
 
 senreta_vortaro:
   - org.mcxa.vortaro/org.mcxa.vortaro.MainActivity
+
+simple_weight_tracker:
+  - com.gmail.makasewicz.maciej/com.gmail.makasewicz.maciej.ui.activity.MainActivity
