new icon: Avast Mobile Security

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -106,3 +106,6 @@ senreta_vortaro:
 
 simple_weight_tracker:
   - com.gmail.makasewicz.maciej/com.gmail.makasewicz.maciej.ui.activity.MainActivity
+
+avast_mobile_security:
+  - com.avast.android.mobilesecurity/com.avast.android.one.base.ui.main.MainActivity
