new icon: Send to Browser

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -109,3 +109,6 @@ simple_weight_tracker:
 
 avast_mobile_security:
   - com.avast.android.mobilesecurity/com.avast.android.one.base.ui.main.MainActivity
+
+send_to_browser:
+  - de.superfusion.sendtobrowser/de.superfusion.sendtobrowser.MainActivity
