new icon: Waifu2x

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -112,3 +112,6 @@ avast_mobile_security:
 
 send_to_browser:
   - de.superfusion.sendtobrowser/de.superfusion.sendtobrowser.MainActivity
+
+waifu2x:
+  - com.kaede_software.superresolutionwaifu2x/com.kaede_software.superresolutionwaifu2x.SdFileListActivity
