new icon: Genotek

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -115,3 +115,6 @@ send_to_browser:
 
 waifu2x:
   - com.kaede_software.superresolutionwaifu2x/com.kaede_software.superresolutionwaifu2x.SdFileListActivity
+
+genotek:
+  - ru.genotek.lka/com.tns.NativeScriptActivity
