new icon: 5POST

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -118,3 +118,6 @@ waifu2x:
 
 genotek:
   - ru.genotek.lka/com.tns.NativeScriptActivity
+
+_5post:
+  - ru.x5.omni/ru.x5.omni.presentation.root.RootActivity
