--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -121,3 +121,6 @@ genotek:
 
 _5post:
   - ru.x5.omni/ru.x5.omni.presentation.root.RootActivity
+
+joom:
+  - tech.jm/com.joom.ui.main.MainActivity
