--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -124,3 +124,6 @@ _5post:
 
 joom:
   - tech.jm/com.joom.ui.main.MainActivity
+
+vita:
+  - com.platfomni.vita/com.platfomni.vita.ui.splash.SplashActivity
