--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -125,5 +125,5 @@ _5post:
 joom:
   - tech.jm/com.joom.ui.main.MainActivity
 
-vita:
+apteka_vita:
   - com.platfomni.vita/com.platfomni.vita.ui.splash.SplashActivity
