--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -58,3 +58,72 @@ my_boy:
 
 lightblocks:
   - de.golfgl.lightblocks/de.golfgl.lightblocks.AndroidLauncher
+
+_7zipper:
+  - org.joa.zipperplus7/org.joa.zipperplus7.StartPageActivity
+
+_8vim_keyboard:
+  - inc.flide.vi8/inc.flide.vim8.SettingsLauncherAlias
+
+amazon_appstore:
+  - com.amazon.venezia/com.amazon.venezia.Launcher
+
+famistudio:
+  - org.famistudio/crc64a10958aa5b7794e0.FamiStudioWindow
+
+mediafire:
+  - com.mediafire.android/com.mediafire.android.MainActivity
+
+music:
+  - com.heytap.music/com.allsaints.music.ui.splash.SplashActivity
+
+nymf:
+  - com.nymf.android/com.nymf.android.ui.SplashActivity
+
+sputnik_news:
+  - com.sputniknews.sputnik/ru.rian.reader5.activity.SplashActivity
+
+devinfo:
+  - com.liuzh.deviceinfo/com.liuzh.deviceinfo.splash.SplashActivity
+
+tabata_timer:
+  - com.mzhang.cleantimer/com.mzhang.cleantimer.MainActivity
+
+cinemax:
+  - com.maximillianleonov.cinemax/com.maximillianleonov.cinemax.CinemaxActivity
+
+andors_trail:
+  - com.gpl.rpg.AndorsTrail/com.gpl.rpg.AndorsTrail.activity.StartScreenActivity
+
+block_puzzle_stone_wars:
+  - de.mwvb.blockpuzzle/de.mwvb.blockpuzzle.global.StartScreenActivity
+
+spell4wiki:
+  - com.manimarank.spell4wiki/com.manimarank.spell4wiki.ui.splash.SplashActivity
+
+senreta_vortaro:
+  - org.mcxa.vortaro/org.mcxa.vortaro.MainActivity
+
+simple_weight_tracker:
+  - com.gmail.makasewicz.maciej/com.gmail.makasewicz.maciej.ui.activity.MainActivity
+
+avast_mobile_security:
+  - com.avast.android.mobilesecurity/com.avast.android.one.base.ui.main.MainActivity
+
+send_to_browser:
+  - de.superfusion.sendtobrowser/de.superfusion.sendtobrowser.MainActivity
+
+waifu2x:
+  - com.kaede_software.superresolutionwaifu2x/com.kaede_software.superresolutionwaifu2x.SdFileListActivity
+
+genotek:
+  - ru.genotek.lka/com.tns.NativeScriptActivity
+
+_5post:
+  - ru.x5.omni/ru.x5.omni.presentation.root.RootActivity
+
+joom:
+  - tech.jm/com.joom.ui.main.MainActivity
+
+apteka_vita:
+  - com.platfomni.vita/com.platfomni.vita.ui.splash.SplashActivity
