--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -127,3 +127,13 @@ joom:
 
 apteka_vita:
   - com.platfomni.vita/com.platfomni.vita.ui.splash.SplashActivity
+
+
+checker_rom_sanity:
+  - org.akanework.checker/org.akanework.checker.MainActivity
+
+google_gemini:
+  - com.google.android.apps.bard/com.google.android.apps.bard.shellapp.BardEntryPointActivity
+
+plugin_voicegpt:
+  - com.wstxda.voicegpt/com.wstxda.voicegpt.VoiceGptActivity
