--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -128,7 +128,6 @@ joom:
 apteka_vita:
   - com.platfomni.vita/com.platfomni.vita.ui.splash.SplashActivity
 
-
 checker_rom_sanity:
   - org.akanework.checker/org.akanework.checker.MainActivity
 
@@ -137,3 +136,12 @@ google_gemini:
 
 plugin_voicegpt:
   - com.wstxda.voicegpt/com.wstxda.voicegpt.VoiceGptActivity
+
+instagram:
+  - com.myinsta.android/com.instagram.android.activity.MainTabActivity
+
+organic_maps:
+  - app.organicmaps.web/app.organicmaps.DownloadResourcesActivity
+
+f_droid:
+  - org.fdroid.basic/org.fdroid.fdroid.views.main.MainActivity
