icon link: MIUI Calculator -> Calculator

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -145,3 +145,6 @@ organic_maps:
 
 f_droid:
   - org.fdroid.basic/org.fdroid.fdroid.views.main.MainActivity
+
+calculator:
+  - com.miui.calculator.go/com.miui.calculator.cal.CalculatorActivity
