icon link: F-Droid -> F-Droid Basic

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -148,3 +148,6 @@ f_droid:
 
 calculator:
   - com.miui.calculator.go/com.miui.calculator.cal.CalculatorActivity
+
+f_droid:
+  - org.fdroid.basic/org.fdroid.fdroid.views.main.MainActivity
