new icon: Bambu Handy

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -151,3 +151,6 @@ calculator:
 
 f_droid:
   - org.fdroid.basic/org.fdroid.fdroid.views.main.MainActivity
+
+bambu_handy:
+  - bbl.intl.bambulab.com/com.bambulab.bambulab.MainActivity
