new icon: Microsoft Loop

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -154,3 +154,6 @@ f_droid:
 
 bambu_handy:
   - bbl.intl.bambulab.com/com.bambulab.bambulab.MainActivity
+
+microsoft_loop:
+  - com.microsoft.loop/com.microsoft.loop.ui.activities.MainActivity
