new icon: GO Field Guide

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -157,3 +157,6 @@ bambu_handy:
 
 microsoft_loop:
   - com.microsoft.loop/com.microsoft.loop.ui.activities.MainActivity
+
+go_field_guide:
+  - com.gofieldguide/com.gofieldguide.MainActivity
