new icon: Royal Mail

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -160,3 +160,6 @@ microsoft_loop:
 
 go_field_guide:
   - com.gofieldguide/com.gofieldguide.MainActivity
+
+royal_mail:
+  - com.royalmail.app.droid/crc64f7852c3a8749d057.SplashActivity
