--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -163,3 +163,6 @@ go_field_guide:
 
 royal_mail:
   - com.royalmail.app.droid/crc64f7852c3a8749d057.SplashActivity
+
+ucom:
+  - am.orange.myorangearmenia/com.ucom.mobile.presentation.activity.MainActivity
