new icon: Sushiro

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -166,3 +166,6 @@ royal_mail:
 
 ucom:
   - am.orange.myorangearmenia/com.ucom.mobile.presentation.activity.MainActivity
+
+sushiro:
+  - jp.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
