new icon: Genshin Drop

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -169,3 +169,6 @@ ucom:
 
 sushiro:
   - jp.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
+
+genshin_drop:
+  - com.genshin.drop/com.genshin.drop.MainActivity
