new icon: Televizo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -172,3 +172,6 @@ sushiro:
 
 genshin_drop:
   - com.genshin.drop/com.genshin.drop.MainActivity
+
+televizo:
+  - com.ottplay.ottplay/com.ottplay.ottplay.StartActivity
