new icon: Home Credit Bank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -175,3 +175,6 @@ genshin_drop:
 
 televizo:
   - com.ottplay.ottplay/com.ottplay.ottplay.StartActivity
+
+home_credit_bank:
+  - kz.homecredit.ibank/cz.bsc.mb.activities.prelogin.SplashScreenActivity
