new icon: Plutus

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -178,3 +178,6 @@ televizo:
 
 home_credit_bank:
   - kz.homecredit.ibank/cz.bsc.mb.activities.prelogin.SplashScreenActivity
+
+plutus:
+  - it.plutus.android/it.plutus.android.MainActivity
