new icon: Unity Bank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -181,3 +181,6 @@ home_credit_bank:
 
 plutus:
   - it.plutus.android/it.plutus.android.MainActivity
+
+unity_bank:
+  - app.imps.unity/app.imps.activities.Splash
