--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -145,3 +145,42 @@ organic_maps:
 
 f_droid:
   - org.fdroid.basic/org.fdroid.fdroid.views.main.MainActivity
+
+calculator:
+  - com.miui.calculator.go/com.miui.calculator.cal.CalculatorActivity
+
+f_droid:
+  - org.fdroid.basic/org.fdroid.fdroid.views.main.MainActivity
+
+bambu_handy:
+  - bbl.intl.bambulab.com/com.bambulab.bambulab.MainActivity
+
+microsoft_loop:
+  - com.microsoft.loop/com.microsoft.loop.ui.activities.MainActivity
+
+go_field_guide:
+  - com.gofieldguide/com.gofieldguide.MainActivity
+
+royal_mail:
+  - com.royalmail.app.droid/crc64f7852c3a8749d057.SplashActivity
+
+ucom:
+  - am.orange.myorangearmenia/com.ucom.mobile.presentation.activity.MainActivity
+
+sushiro:
+  - jp.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
+
+genshin_drop:
+  - com.genshin.drop/com.genshin.drop.MainActivity
+
+televizo:
+  - com.ottplay.ottplay/com.ottplay.ottplay.StartActivity
+
+home_credit_bank:
+  - kz.homecredit.ibank/cz.bsc.mb.activities.prelogin.SplashScreenActivity
+
+plutus:
+  - it.plutus.android/it.plutus.android.MainActivity
+
+unity_bank:
+  - app.imps.unity/app.imps.activities.Splash
