new icon: Maxima

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -187,3 +187,6 @@ unity_bank:
 
 stripe:
   - com.stripe.android.dashboard/com.stripe.dashboard.ui.launch.MainActivity
+
+maxima:
+  - lt.maxima.aciu/lt.maxima.aciu.LauncherActivity
