--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -184,3 +184,9 @@ plutus:
 
 unity_bank:
   - app.imps.unity/app.imps.activities.Splash
+
+stripe:
+  - com.stripe.android.dashboard/com.stripe.dashboard.ui.launch.MainActivity
+
+maxima:
+  - lt.maxima.aciu/lt.maxima.aciu.LauncherActivity
