netoolpro2 icon added

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,6 @@
 #
 coreirc:
   - co.aureolin.coreirc.lite/co.aureolin.coreirc.lite.MainActivity
+
+netoolpro2:
+  - io.netool.Pro2/io.netool.Pro2.MainActivity
