--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -13,3 +13,6 @@ coreirc:
 
 netoolpro2:
   - io.netool.Pro2/io.netool.Pro2.MainActivity
+
+aeromatic:
+  - com.awardsense.aeromatic/com.awardsense.aeromatic.MainActivity
