added b.smart icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -16,3 +16,6 @@ netoolpro2:
 
 aeromatic:
   - com.awardsense.aeromatic/com.awardsense.aeromatic.MainActivity
+
+bsmart:
+  - com.piusi.sssa/com.piusi.sssa.MainActivity
