bvnc icon added

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -19,3 +19,7 @@ aeromatic:
 
 bsmart:
   - com.piusi.sssa/com.piusi.sssa.MainActivity
+
+bvnc:
+  - com.iiordanov.freebVNC/com.undatech.opaque.ConnectionGridActivity
+  - com.iiordanov.bVNC/com.undatech.opaque.ConnectionGridActivity
