warzone requested icon added

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ bsmart:
 bvnc:
   - com.iiordanov.freebVNC/com.undatech.opaque.ConnectionGridActivity
   - com.iiordanov.bVNC/com.undatech.opaque.ConnectionGridActivity
+
+warzone:
+  - com.activision.callofduty.warzone/com.activision.game.MainActivity
