--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,5 +24,5 @@ bvnc:
   - com.iiordanov.freebVNC/com.undatech.opaque.ConnectionGridActivity
   - com.iiordanov.bVNC/com.undatech.opaque.ConnectionGridActivity
 
-warzone:
+call_of_duty_warzone:
   - com.activision.callofduty.warzone/com.activision.game.MainActivity
