--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,9 +11,6 @@
 coreirc:
   - co.aureolin.coreirc.lite/co.aureolin.coreirc.lite.MainActivity
 
-netoolpro2:
-  - io.netool.Pro2/io.netool.Pro2.MainActivity
-
 aeromatic:
   - com.awardsense.aeromatic/com.awardsense.aeromatic.MainActivity
 
@@ -26,3 +23,11 @@ bvnc:
 
 call_of_duty_warzone:
   - com.activision.callofduty.warzone/com.activision.game.MainActivity
+
+netool_pro:
+  - io.netool.Pro2/io.netool.Pro2.MainActivity
+  - io.netoolpro.app/io.netoolpro.app.MainActivity
+
+netool_lite:
+  - io.netool.Lite/io.netool.Lite.MainActivity
+  - io.netool.app/io.netool.app.MainActivity
