6 new icons and 2 icon fixes (#808)
* coreirc added

* netoolpro2 icon added

* fixed photosync

* ewelink icon fixed

* aeromatic

* added b.smart icon

* bvnc icon added

* warzone requested icon added

* rework and rename Warzone icon

* rework netool.io icon, add Lite version and more compinfos

* rework bvnc

* rework coreirc

* rework bsmart

* rework aeromatic

* update vectors

---------

Co-authored-by: Antonio Fernandez <tfernandez.sc2@sgmail.com>
Co-authored-by: flameshikari <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,26 @@
 #
 # new_icon_2_alt_1: {}
 #
+coreirc:
+  - co.aureolin.coreirc.lite/co.aureolin.coreirc.lite.MainActivity
+
+aeromatic:
+  - com.awardsense.aeromatic/com.awardsense.aeromatic.MainActivity
+
+bsmart:
+  - com.piusi.sssa/com.piusi.sssa.MainActivity
+
+bvnc:
+  - com.iiordanov.freebVNC/com.undatech.opaque.ConnectionGridActivity
+  - com.iiordanov.bVNC/com.undatech.opaque.ConnectionGridActivity
+
+call_of_duty_warzone:
+  - com.activision.callofduty.warzone/com.activision.game.MainActivity
+
+netool_pro:
+  - io.netool.Pro2/io.netool.Pro2.MainActivity
+  - io.netoolpro.app/io.netoolpro.app.MainActivity
+
+netool_lite:
+  - io.netool.Lite/io.netool.Lite.MainActivity
+  - io.netool.app/io.netool.app.MainActivity
