--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -31,3 +31,6 @@ netool_pro:
 netool_lite:
   - io.netool.Lite/io.netool.Lite.MainActivity
   - io.netool.app/io.netool.app.MainActivity
+
+ltk:
+  - com.rewardstyle.liketoknowit/com.rewardstyle.liketoknowit.SplashActivity
