new icon: Trafi

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -34,3 +34,6 @@ netool_lite:
 
 ltk:
   - com.rewardstyle.liketoknowit/com.rewardstyle.liketoknowit.SplashActivity
+
+trafi:
+  - com.trafi.android.tr/com.trafi.whitelabel.MainActivity
