new icon: Flink

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -37,3 +37,6 @@ ltk:
 
 trafi:
   - com.trafi.android.tr/com.trafi.whitelabel.MainActivity
+
+flink:
+  - com.pickery.app/com.flink.consumer.feature.splash.LauncherSplashActivity
