new icon: Baskin-Robbins

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -40,3 +40,6 @@ trafi:
 
 flink:
   - com.pickery.app/com.flink.consumer.feature.splash.LauncherSplashActivity
+
+baskin_robbins:
+  - com.baskinrobbins.app/com.baskinrobbins.app.MainActivity
