new icon: Planet VPN

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -43,3 +43,6 @@ flink:
 
 baskin_robbins:
   - com.baskinrobbins.app/com.baskinrobbins.app.MainActivity
+
+planet_vpn:
+  - com.freevpnplanet/com.freevpnplanet.presentation.splash.view.SplashActivity
