new icon: GTA Liberty City Stories

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -46,3 +46,6 @@ baskin_robbins:
 
 planet_vpn:
   - com.freevpnplanet/com.freevpnplanet.presentation.splash.view.SplashActivity
+
+gta_liberty_city_stories:
+  - com.rockstargames.gtalcs/com.rockstargames.gtalcs.BootGameActivity
