--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -31,3 +31,21 @@ netool_pro:
 netool_lite:
   - io.netool.Lite/io.netool.Lite.MainActivity
   - io.netool.app/io.netool.app.MainActivity
+
+ltk:
+  - com.rewardstyle.liketoknowit/com.rewardstyle.liketoknowit.SplashActivity
+
+trafi:
+  - com.trafi.android.tr/com.trafi.whitelabel.MainActivity
+
+flink:
+  - com.pickery.app/com.flink.consumer.feature.splash.LauncherSplashActivity
+
+baskin_robbins:
+  - com.baskinrobbins.app/com.baskinrobbins.app.MainActivity
+
+planet_vpn:
+  - com.freevpnplanet/com.freevpnplanet.presentation.splash.view.SplashActivity
+
+gta_liberty_city_stories:
+  - com.rockstargames.gtalcs/com.rockstargames.gtalcs.BootGameActivity
