--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -49,3 +49,15 @@ planet_vpn:
 
 gta_liberty_city_stories:
   - com.rockstargames.gtalcs/com.rockstargames.gtalcs.BootGameActivity
+
+fast_draw:
+  - peterfajdiga.fastdraw/peterfajdiga.fastdraw.activities.MainActivity
+
+fast_draw_preferences:
+  - peterfajdiga.fastdraw/peterfajdiga.fastdraw.activities.SettingsActivity
+
+file_navigator:
+  - com.w2sv.filenavigator/com.w2sv.filenavigator.MainActivity
+
+pdf_to_images:
+  - uk.me.paraskos.pdfrenderer/uk.me.paraskos.pdfrenderer.MainActivity
