Added icons: app_lounge, asn_bank, berichtenbox, coinmerce, declaree, declaree1, nommo_pro, oura, spendcatcher

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -61,3 +61,30 @@ file_navigator:
 
 pdf_to_images:
   - uk.me.paraskos.pdfrenderer/uk.me.paraskos.pdfrenderer.MainActivity
+  
+coinmerce:
+  - io.coinmerce.app/io.coinmerce.coinmerce.MainActivity
+ 
+oura:
+  - com.ouraring.oura/com.ouraring.oura.launcher.LauncherActivity
+ 
+nommo_pro:
+  - com.razerzone.beatrice/com.razerzone.beatrice.presentation.main.MainActivity
+ 
+asn_bank:
+  - nl.devolksbank.asn.bankieren/nl.devolksbank.mobile.banking.splash.SplashActivity
+ 
+berichtenbox:
+  - nl.rijksoverheid.mbb.pub/crc64966c675d1653be38.MainActivity
+
+declaree:
+  - com.declaree.declaree/com.declaree.declaree.activity.SplashActivity
+
+declaree1:
+  - ComponentInfo{com.mobilexpense.declaree/com.mobilexpense.declaree.ui.MainActivity
+
+spendcatcher:
+  - ComponentInfo{com.mobilexpense.spendcatcher/crc64a9eb0d1d4e9fd3b7.LoginActivity
+  
+app_lounge:
+  - foundation.e.apps/foundation.e.apps.MainActivity
