update icons and fix issues

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,11 +80,11 @@ berichtenbox:
 declaree:
   - com.declaree.declaree/com.declaree.declaree.activity.SplashActivity
 
-declaree1:
-  - ComponentInfo{com.mobilexpense.declaree/com.mobilexpense.declaree.ui.MainActivity
+declaree_mobileexpense:
+  - com.mobilexpense.declaree/com.mobilexpense.declaree.ui.MainActivity
 
 spendcatcher:
-  - ComponentInfo{com.mobilexpense.spendcatcher/crc64a9eb0d1d4e9fd3b7.LoginActivity
+  - com.mobilexpense.spendcatcher/crc64a9eb0d1d4e9fd3b7.LoginActivity
   
 app_lounge:
   - foundation.e.apps/foundation.e.apps.MainActivity
