--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -88,3 +88,9 @@ spendcatcher:
   
 app_lounge:
   - foundation.e.apps/foundation.e.apps.MainActivity
+
+ebay_kleinanzeigen:
+  - com.ebay.kleinanzeigen/com.ebay.kleinanzeigen.ui.main.MainActivity
+
+free_now_driver:
+  - taxi.android.client/com.mytaxi.passenger.startup.impl.ui.RouterActivity
