new icon: ByeDPI

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -94,3 +94,6 @@ ebay_kleinanzeigen:
 
 free_now_driver:
   - taxi.android.client/com.mytaxi.passenger.startup.impl.ui.RouterActivity
+
+byedpi:
+  - io.github.dovecoteescapee.byedpi/io.github.dovecoteescapee.byedpi.activities.MainActivity
