new icon: Ufanet (Уфанет)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -97,3 +97,6 @@ free_now_driver:
 
 byedpi:
   - io.github.dovecoteescapee.byedpi/io.github.dovecoteescapee.byedpi.activities.MainActivity
+
+ufanet:
+  - ru.ufanet.myufanet/ru.ufanet.myufanet.splash.MainSplashActivity
