new icon: Traektoria (Траектория)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -100,3 +100,6 @@ byedpi:
 
 ufanet:
   - ru.ufanet.myufanet/ru.ufanet.myufanet.splash.MainSplashActivity
+
+traektoria:
+  - ru.traektoria.android/io.imshop.development.MainActivity
