new icon: Zvuk (Звук)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -103,3 +103,6 @@ ufanet:
 
 traektoria:
   - ru.traektoria.android/io.imshop.development.MainActivity
+
+zvuk:
+  - com.zvooq.openplay/com.zvooq.openplay.splash.view.SplashActivity
