add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -106,3 +106,6 @@ traektoria:
 
 zvuk:
   - com.zvooq.openplay/com.zvooq.openplay.splash.view.SplashActivity
+
+ace_stream_engine:
+  - org.acestream.node/org.acestream.engine.ui.MainWebViewActivity
