--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -88,3 +88,24 @@ spendcatcher:
   
 app_lounge:
   - foundation.e.apps/foundation.e.apps.MainActivity
+
+ebay_kleinanzeigen:
+  - com.ebay.kleinanzeigen/com.ebay.kleinanzeigen.ui.main.MainActivity
+
+free_now_driver:
+  - taxi.android.client/com.mytaxi.passenger.startup.impl.ui.RouterActivity
+
+byedpi:
+  - io.github.dovecoteescapee.byedpi/io.github.dovecoteescapee.byedpi.activities.MainActivity
+
+ufanet:
+  - ru.ufanet.myufanet/ru.ufanet.myufanet.splash.MainSplashActivity
+
+traektoria:
+  - ru.traektoria.android/io.imshop.development.MainActivity
+
+zvuk:
+  - com.zvooq.openplay/com.zvooq.openplay.splash.view.SplashActivity
+
+ace_stream_engine:
+  - org.acestream.node/org.acestream.engine.ui.MainWebViewActivity
