--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,15 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+iyox_wormhole:
+  - com.iyox.wormhole/com.iyox.wormhole.MainActivity
+
+linkora:
+  - com.sakethh.linkora/com.sakethh.linkora.ui.MainActivity
+
+medtimer:
+  - com.futsch1.medtimer/com.futsch1.medtimer.MainActivity
+
+neer:
+  - com.criticalay.neer/com.criticalay.neer.NeerActivity
