add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,7 @@ medtimer:
 
 neer:
   - com.criticalay.neer/com.criticalay.neer.NeerActivity
+
+calendar_white:
+  - deltazero.amarok/deltazero.amarok.launcher.calendar
+  - deltazero.amarok.foss/deltazero.amarok.launcher.calendar
