new icon: Declaree Mobilexpense

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,6 @@ neer:
 calendar_white:
   - deltazero.amarok/deltazero.amarok.launcher.calendar
   - deltazero.amarok.foss/deltazero.amarok.launcher.calendar
+
+declaree_mobilexpense:
+  - com.mobilexpense.declaree/com.mobilexpense.declaree.ui.MainActivity
