--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,39 @@ medtimer:
 
 neer:
   - com.criticalay.neer/com.criticalay.neer.NeerActivity
+
+blood_pressure_app:
+  - com.derdilla.bloodPressureApp/com.derdilla.blood_pressure_app.MainActivity
+
+cz:
+  - nl.cz.app/nl.cz.app.MainActivity
+
+homey:
+  - app.homey/app.homey.MainActivity
+
+ics_cards:
+  - com.ics.nl.icscards/com.ics.nl.icscards.MainActivity
+
+mijndsw:
+  - nl.dsw.android.mijndsw/nl.mijnverzekering.modules.launch.LaunchActivity
+
+nextpush:
+  - org.unifiedpush.distributor.nextpush/org.unifiedpush.distributor.nextpush.activities.StartActivity
+
+owntracks:
+  - org.owntracks.android/org.owntracks.android.ui.map.MapActivity
+
+sobriety:
+  - com.katiearose.sobriety/com.katiearose.sobriety.activities.Main
+
+sportcity:
+  - ComponentInfo{nl.sportcity.android/nl.fitforfree.app.splash.SplashActivity
+
+tado:
+  - com.tado/com.tado.startup.ui.StartupActivity
+
+tasks:
+  - foundation.e.tasks/org.dmfs.tasks.TaskListActivity
+
+zorg_messenger:
+  - com.kpn.zorgmessenger/com.alterdesk.messenger.RootActivity
