new icon: Unisamp

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,3 +27,6 @@ calendar_white:
 
 declaree_mobilexpense:
   - com.mobilexpense.declaree/com.mobilexpense.declaree.ui.MainActivity
+
+unisamp:
+  - ru.unisamp_mobile.launcher/ru.unisamp_mobile.launcher.MainActivity
