new icon: Gosuslugi Auto

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ declaree_mobilexpense:
 
 unisamp:
   - ru.unisamp_mobile.launcher/ru.unisamp_mobile.launcher.MainActivity
+
+gosuslugi_auto:
+  - ru.gosuslugi.auto/ru.gosuslugi.auto.ui.activity.auto.AutoActivity
