new icon: HideMyAss

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,6 @@ unisamp:
 
 gosuslugi_auto:
   - ru.gosuslugi.auto/ru.gosuslugi.auto.ui.activity.auto.AutoActivity
+
+hidemyass:
+  - com.hidemyass.hidemyassprovpn/com.avast.android.vpn.activity.HmaOnboardingActivity
