new icon: Cleanfox

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,6 @@ gosuslugi_auto:
 
 hidemyass:
   - com.hidemyass.hidemyassprovpn/com.avast.android.vpn.activity.HmaOnboardingActivity
+
+cleanfox:
+  - io.cleanfox.android/io.cleanfox.android.view.splashscreen.SplashScreenActivity
