--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,22 @@ medtimer:
 
 neer:
   - com.criticalay.neer/com.criticalay.neer.NeerActivity
+
+calendar_white:
+  - deltazero.amarok/deltazero.amarok.launcher.calendar
+  - deltazero.amarok.foss/deltazero.amarok.launcher.calendar
+
+declaree_mobilexpense:
+  - com.mobilexpense.declaree/com.mobilexpense.declaree.ui.MainActivity
+
+unisamp:
+  - ru.unisamp_mobile.launcher/ru.unisamp_mobile.launcher.MainActivity
+
+gosuslugi_auto:
+  - ru.gosuslugi.auto/ru.gosuslugi.auto.ui.activity.auto.AutoActivity
+
+hidemyass:
+  - com.hidemyass.hidemyassprovpn/com.avast.android.vpn.activity.HmaOnboardingActivity
+
+cleanfox:
+  - io.cleanfox.android/io.cleanfox.android.view.splashscreen.SplashScreenActivity
