--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,11 @@
 #
 # new_icon_2_alt_1: {}
 #
+timetable:
+    - app.smart.timetable/app.smart.timetable.MainActivity
+
+slidebox:
+    - co.slidebox/co.slidebox.ui.root.RootActivity
+
+al_quran_indonesia:
+    - com.quran.labs.androidquran.naskh/com.quran.labs.androidquran.QuranDataActivity
