--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -34,7 +34,7 @@ sobriety:
   - com.katiearose.sobriety/com.katiearose.sobriety.activities.Main
 
 sportcity:
-  - ComponentInfo{nl.sportcity.android/nl.fitforfree.app.splash.SplashActivity
+  - nl.sportcity.android/nl.fitforfree.app.splash.SplashActivity
 
 tado:
   - com.tado/com.tado.startup.ui.StartupActivity
