--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,3 +53,35 @@ slidebox:
 
 al_quran_indonesia:
   - com.quran.labs.androidquran.naskh/com.quran.labs.androidquran.QuranDataActivity
+
+coinbase_wallet:
+  - org.toshi/org.toshi.MainActivity
+
+line_camera:
+  - jp.naver.linecamera.android/jp.naver.linecamera.android.activity.ProxyActivity
+
+ms_designer:
+  - com.microsoft.designer/com.microsoft.designer.app.home.view.launch.DesignerLoginActivity
+
+ms_designer_alt: {}
+
+oxxo:
+  - com.pagopopmobile/com.pagopopmobile.MainActivity
+
+pay_tm_for_business:
+  - com.paytm.business/com.paytm.business.splash.SplashActivity
+
+perplexity:
+  - ai.perplexity.app.android/ai.perplexity.app.android.ui.main.MainActivity
+
+silence_sms:
+  - org.smssecure.smssecure/org.smssecure.smssecure.RoutingActivity
+
+unison:
+  - com.intel.mde/com.screenovate.webphone.app.mde.MainActivity
+
+waterfox:
+  - net.waterfox.android.release/net.waterfox.android.release.App
+
+widgetable:
+  - com.widgetable.theme.android/com.widgetable.theme.android.ui.MainActivity
