--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -54,12 +54,10 @@ slidebox:
 al_quran_indonesia:
   - com.quran.labs.androidquran.naskh/com.quran.labs.androidquran.QuranDataActivity
 
-<<<<<<< HEAD
 tisseo:
   - fr.tisseo.android/fr.tisseo.android.activity.splashscreen.SplashScreenActivity
   - fr.tisseo.android/fr.tisseo.android.activity.home.HomeActivity
 
-=======
 coinbase_wallet:
   - org.toshi/org.toshi.MainActivity
 
@@ -69,7 +67,7 @@ line_camera:
 ms_designer:
   - com.microsoft.designer/com.microsoft.designer.app.home.view.launch.DesignerLoginActivity
 
-ms_designer_alt: {}
+ms_designer_alt_1: {}
 
 oxxo:
   - com.pagopopmobile/com.pagopopmobile.MainActivity
@@ -91,4 +89,3 @@ waterfox:
 
 widgetable:
   - com.widgetable.theme.android/com.widgetable.theme.android.ui.MainActivity
->>>>>>> 8c8a846296f4205c9b8ad04c63ab1fd84801d6df
