--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,15 @@ waterfox:
 
 widgetable:
   - com.widgetable.theme.android/com.widgetable.theme.android.ui.MainActivity
+
+conversa:
+  - com.drdisagree.conversa/com.drdisagree.conversa.MainActivity
+
+mygarden:
+  - fr.bugprogEnterprise.mygarden/fr.bugprogEnterprise.mygarden.MainActivity
+
+snappr:
+  - com.looker.notesy/com.looker.notesy.ui.MainActivity
+
+xed_editor:
+  - com.rk.xededitor/com.rk.xededitor.activities.MainActivity.MainActivity
