--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -51,7 +51,7 @@ timetable:
 slidebox:
   - co.slidebox/co.slidebox.ui.root.RootActivity
 
-al_quran_indonesia:
+quran_indopak:
   - com.quran.labs.androidquran.naskh/com.quran.labs.androidquran.QuranDataActivity
 
 tisseo:
@@ -101,3 +101,9 @@ snappr:
 
 xed_editor:
   - com.rk.xededitor/com.rk.xededitor.activities.MainActivity.MainActivity
+
+prayerly:
+  - com.prayerly.app/com.prayerly.app.MainActivity
+
+quranly:
+  - com.quranly.app/com.quranly.app.MainActivity
