--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -107,3 +107,12 @@ prayerly:
 
 quranly:
   - com.quranly.app/com.quranly.app.MainActivity
+
+audio_source:
+  - fr.dzx.audiosource/fr.dzx.audiosource.MainActivity
+
+nextcloud_maps:
+  - it.danieleverducci.nextcloudmaps/it.danieleverducci.nextcloudmaps.activity.login.LoginActivity
+
+folder_blue:
+  - discreetlauncher.folder/discreetlauncher.folder
