Alright... last one

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,56 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+notes_e_os:
+  - foundation.e.notes/it.niedermann.owncloud.notes.main.MainActivity
+
+tasks_e_os:
+  - foundation.e.tasks/org.dmfs.tasks.TaskListActivity
+
+mail_e_os:
+  - foundation.e.mail/com.fsck.k9.activity.MessageList
+  
+messages_e_os:
+  - foundation.e.message/com.moez.QKSMS.feature.main.MainActivity
+
+exist:
+  - co.hellocode.exist/co.hellocode.exist.TabActivity
+
+hellrider3:
+  - com.makabaka.hellrider3/com.unity3d.player.UnityPlayerActivity
+
+npo_klassiek:
+  - nl.omroep.npo.radio4/nl.omroep.npo.presentation.SplashActivity
+
+npo_luister:
+  - nl.omroep.npo.luister/nl.omroep.npo.luister.SplashActivity
+
+npo_radio_1:
+  - nl.omroep.npo.radio1/nl.omroep.npo.presentation.SplashActivity
+
+npo_radio_2:
+  - nl.omroep.npo.radio2/nl.omroep.npo.presentation.SplashActivity
+
+npo_radio_5:
+  - nl.omroep.npo.radio5/nl.omroep.npo.presentation.SplashActivity
+
+npo_start:
+  - nl.uitzendinggemist/nl.uitzendinggemist.mobile.presentation.activities.StartupActivity
+
+npo_sterren_nl:
+  - nl.omroep.npo.sterrennl/nl.omroep.npo.presentation.SplashActivity
+
+opp_app:
+  - com.theoppcompany.com.oppapp/com.theoppcompany.com.oppapp.MainActivity
+
+pax_mobile_alt_1: {}
+
+saveastxt:
+  - io.github.saveastxt/io.github.saveastxt.MainActivity
+
+passandroid:
+  - org.ligi.passandroid/org.ligi.passandroid.ui.PassListActivity
+
+wolvesville:
+  - com.werewolfapps.online/com.werewolfapps.online.MainActivity
