new icon: Big Font

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 oxxo_spin:
   - com.pagopopmobile/com.pagopopmobile.MainActivity
+
+a_big_font:
+  - com.lambdafont.bigfont/com.lambdafont.bigfont.activities.SplashActivity
