--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -64,3 +64,6 @@ wolvesville:
 
 oxxo_spin:
   - com.pagopopmobile/com.pagopopmobile.MainActivity
+
+a_big_font:
+  - com.lambdafont.bigfont/com.lambdafont.bigfont.activities.SplashActivity
