rename /e/OS icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,16 +9,16 @@
 # new_icon_2_alt_1: {}
 #
 
-notes_e_os:
+e_os_notes:
   - foundation.e.notes/it.niedermann.owncloud.notes.main.MainActivity
 
-tasks_e_os:
+e_os_tasks:
   - foundation.e.tasks/org.dmfs.tasks.TaskListActivity
 
-mail_e_os:
+e_os_mail:
   - foundation.e.mail/com.fsck.k9.activity.MessageList
   
-messages_e_os:
+e_os_messages:
   - foundation.e.message/com.moez.QKSMS.feature.main.MainActivity
 
 exist:
