fix merge conflicts

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -61,3 +61,6 @@ passandroid:
 
 wolvesville:
   - com.werewolfapps.online/com.werewolfapps.online.MainActivity
+
+oxxo_spin:
+  - com.pagopopmobile/com.pagopopmobile.MainActivity
