--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,21 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+anivu:
+  - com.skyd.anivu/com.skyd.anivu.ui.activity.MainActivity
+
+ashell_you:
+  - in.hridayan.ashell/in.hridayan.ashell.activities.MainActivity
+
+music_you:
+  - com.github.musicyou/it.vfsfitvnm.vimusic.MainActivity
+
+novel_dokusha:
+  - my.noveldokusha/my.noveldokusha.ui.screens.main.MainActivity
+
+snpack:
+  - me.huizengek.snpack/me.huizengek.snpack.MainActivity
+
+vitune:
+  - app.vitune.android/app.vitune.android.MainActivity
