--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -26,3 +26,11 @@ snpack:
 
 vitune:
   - app.vitune.android/app.vitune.android.MainActivity
+  - app.vitune.android.debug/app.vitune.android.MainActivity
+  - app.vitune.android.nightly/app.vitune.android.MainActivity
+
+vimusic:
+  - it.vfsfitvnm.vimusic.nightly/it.vfsfitvnm.vimusic.MainActivity
+
+animity:
+  - com.kl3jvi.animity/com.kl3jvi.animity.ui.activities.intro.IntroActivity
