--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,5 +35,5 @@ vimusic:
 animity:
   - com.kl3jvi.animity/com.kl3jvi.animity.ui.activities.intro.IntroActivity
 
-quick-bible:
+quick_bible:
   - yuku.alkitab.kjv/yuku.alkitab.base.IsiActivity
