--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -34,3 +34,6 @@ vimusic:
 
 animity:
   - com.kl3jvi.animity/com.kl3jvi.animity.ui.activities.intro.IntroActivity
+
+quick_bible:
+  - yuku.alkitab.kjv/yuku.alkitab.base.IsiActivity
