update pano scrobbler

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -37,3 +37,6 @@ animity:
 
 quick_bible:
   - yuku.alkitab.kjv/yuku.alkitab.base.IsiActivity
+
+pano_scrobbler:
+  - com.arn.scrobble/com.arn.scrobble.main.MainActivity
