--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -40,3 +40,12 @@ quick_bible:
 
 pano_scrobbler:
   - com.arn.scrobble/com.arn.scrobble.main.MainActivity
+
+cache_cleaner:
+  - com.github.bmx666.appcachecleaner/com.github.bmx666.appcachecleaner.ui.activity.LauncherActivity
+
+airtable:
+  - com.formagrid.airtable/com.formagrid.airtable.activity.session.SessionLoaderActivity
+
+alga:
+  - tech.laihz.alga/tech.laihz.alga.MainActivity
