--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -49,3 +49,6 @@ airtable:
 
 alga:
   - tech.laihz.alga/tech.laihz.alga.MainActivity
+
+ivy_wallet_demo:
+  - com.ivy.wallet.debug/com.ivy.wallet.RootActivity
