add icons & componentinfo (#829)
* add icons

* fix typo

* update pano scrobbler

* update componentinfo

cache cleaner
airtable
alga

* add icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -37,3 +37,18 @@ animity:
 
 quick_bible:
   - yuku.alkitab.kjv/yuku.alkitab.base.IsiActivity
+
+pano_scrobbler:
+  - com.arn.scrobble/com.arn.scrobble.main.MainActivity
+
+cache_cleaner:
+  - com.github.bmx666.appcachecleaner/com.github.bmx666.appcachecleaner.ui.activity.LauncherActivity
+
+airtable:
+  - com.formagrid.airtable/com.formagrid.airtable.activity.session.SessionLoaderActivity
+
+alga:
+  - tech.laihz.alga/tech.laihz.alga.MainActivity
+
+ivy_wallet_demo:
+  - com.ivy.wallet.debug/com.ivy.wallet.RootActivity
