add requested compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -52,3 +52,6 @@ alga:
 
 ivy_wallet_demo:
   - com.ivy.wallet.debug/com.ivy.wallet.RootActivity
+
+tata_play:
+  - com.ryzmedia.tatasky/com.ryzmedia.tatasky.Default
