new icon: Gosuslugi Dom

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -55,3 +55,6 @@ ivy_wallet_demo:
 
 tata_play:
   - com.ryzmedia.tatasky/com.ryzmedia.tatasky.Default
+
+gosuslugi_dom:
+  - ru.sigma.gisgkh/ru.sigma.gisgkh.MainActivity
