new icon: TK Energy

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -58,3 +58,6 @@ tata_play:
 
 gosuslugi_dom:
   - ru.sigma.gisgkh/ru.sigma.gisgkh.MainActivity
+
+tk_energy:
+  - ru.nrg_tk.mobileclient/ru.nrg_tk.mobileclient.activities.SplashActivity
