new icon: Intersvyaz

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -61,3 +61,6 @@ gosuslugi_dom:
 
 tk_energy:
   - ru.nrg_tk.mobileclient/ru.nrg_tk.mobileclient.activities.SplashActivity
+
+intersvyaz:
+  - com.intersvyaz.lk/com.intersvyaz.lk.ui.launch.LaunchActivity
