new icon: METRO

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -64,3 +64,6 @@ tk_energy:
 
 intersvyaz:
   - com.intersvyaz.lk/com.intersvyaz.lk.ui.launch.LaunchActivity
+
+metro:
+  - www.metro.com/app.metro.digital.leto.metro_android.main_activity.MainActivity
