new icon: My Invisalign

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,3 +67,6 @@ intersvyaz:
 
 metro:
   - www.metro.com/app.metro.digital.leto.metro_android.main_activity.MainActivity
+
+my_invisalign:
+  - com.aligntech.myinvisalign/com.aligntech.myinvisalign.platform.landing.ui.activity.SplashActivity
