--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -70,3 +70,6 @@ metro:
 
 my_invisalign:
   - com.aligntech.myinvisalign/com.aligntech.myinvisalign.platform.landing.ui.activity.SplashActivity
+
+hive:
+  - uk.co.centrica.hive/uk.co.centrica.hive.ui.splash.SplashScreenActivity
