--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -52,3 +52,24 @@ alga:
 
 ivy_wallet_demo:
   - com.ivy.wallet.debug/com.ivy.wallet.RootActivity
+
+tata_play:
+  - com.ryzmedia.tatasky/com.ryzmedia.tatasky.Default
+
+gosuslugi_dom:
+  - ru.sigma.gisgkh/ru.sigma.gisgkh.MainActivity
+
+tk_energy:
+  - ru.nrg_tk.mobileclient/ru.nrg_tk.mobileclient.activities.SplashActivity
+
+intersvyaz:
+  - com.intersvyaz.lk/com.intersvyaz.lk.ui.launch.LaunchActivity
+
+metro:
+  - www.metro.com/app.metro.digital.leto.metro_android.main_activity.MainActivity
+
+my_invisalign:
+  - com.aligntech.myinvisalign/com.aligntech.myinvisalign.platform.landing.ui.activity.SplashActivity
+
+hive:
+  - uk.co.centrica.hive/uk.co.centrica.hive.ui.splash.SplashScreenActivity
